# grblhal-rpc

./: CMakeLists.txt  README.md  blink_led.h  blink_led_server.cpp  blink_led_server.h  grbl_rpc.c  grblhal-rpc.erpc  grblhal_rpc.c  grblhal_rpc.h  grblhal_rpc_client.cpp  grblhal_rpc_server.cpp  grblhal_rpc_server.h  rpc_wrappers.c  rpc_wrappers.h
config/: erpc_config.h
grblhal_python/: __init__.py
grblhal_python/grblhal_rpc/: __init__.py  client.py  common.py  interface.py  server.py
infra/: erpc_manually_constructed.h
port/: erpc_grblhal.cpp  erpc_grblhal.h
setup/: erpc_setup_grblhal.cpp  erpc_transport_setup.h
transports/: erpc_grblhal_transport.cpp  erpc_grblhal_transport.h  erpc_serial_transport.cpp
